# agentic-kanban

./: .gitignore  CLAUDE.md  pyproject.toml  run_worker.py  task-queue-architecture.md  tasks.py  worker.sh
.github/workflows/: test.yml
docs/: architecture.md
docs/specs/: architecture.md  task-queue-architecture.md  watching-state.md
tests/: test_tasks.py
