[project]
name = "agentic-kanban"
version = "0.1.0"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [".git", "__pycache__", "*.pyc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "W"]
ignore = [
    "E731",
    "F401",
    "E501",
    "W291", "W292", "W293",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pytest]
python = "python3.9"
